--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -23,7 +23,7 @@ themesDir = "../.."
     bio = "Blogger - Programmer - Gopher"
     location = "Earth"
     site_description = ""
-    copyright  = "Powered by [Hugo](//gohugo.io). Theme by [PPOffice](http://github.com/ppoffice)."
+    copyright  = "Powered by [Hugo](//gohugo.io) + [Forked Icarus Theme](https://github.com/pakkunbot/hugo-icarus-theme)."
     avatar = "css/images/avatar.png"
     # Enter your email address to display your Gravatar icon in the profile. If not set the theme
     # will fallback to the avatar.
